<resources>
    <string name="app_name">Alarm App</string>
    <string name="alarm_set_error">Please select date and time</string>
    <string name="pm">pm</string>
    <string name="am">am</string>
    <string name="confirmation">Confirm you want set the alarm at:</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="alarm_app">Alarm App</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="set_alarm">Set Alarm</string>
</resources>