<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/alarm_app"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/alarmTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/selectDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/selectDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/select_date"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/selectTime"
        app:layout_constraintTop_toBottomOf="@+id/alarmTime"
        app:layout_constraintVertical_chainStyle="packed"
        tools:layout_editor_absoluteX="10dp" />

    <Button
        android:id="@+id/selectTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/select_time"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/setAlarm"
        app:layout_constraintTop_toBottomOf="@id/selectDate" />

    <Button
        android:id="@+id/setAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/set_alarm"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectTime" />

</androidx.constraintlayout.widget.ConstraintLayout>